--- a/trunk/ReleaseNotes/ReleaseNote.html
+++ b/trunk/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,23 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v2.6.5 Maintenance Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log since v2.6.4:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Issue 501: Support for MediaPortal 1.2 skin feature 'Load Parameter' so that skin can jump to any view defined from the users home screen.</p></li>
+			<li><p>Issue 516: Fixed Virtual Keyboard not being displayed in MediaPortal 1.2 Alpha.</p></li>
+			<li><p>Issue N/A: Added helper method DBView.GetSkinViews() which skinners can take advantage of to get a list of available views in users database. Would typically be used in a skin editor together with the 'Load plugin with parameter' functionality in MediaPortal 1.2.</p></li>
+			<li><p>Issue N/A: Extended GetMostRecents() method so can optionally filter out watched episodes.</p></li>
+			<li><p>Issue N/A: Fix a possible exception when getting fanart from database.</p></li>
+			<li><p>Issue 513: Updated Greek translation file, thanks ellapse.</p></li>
+			<li><p>Issue N/A: Updated Polish translations, thanks amilewski.</p></li>
+		</ul>
+	</div>
+	
 	<div class="main_title">TVSeries v2.6.4 Maintenance Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log since v2.6.3:</div>
