--- a/ReleaseNotes/ReleaseNote.html
+++ b/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,20 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v2.6.7 Maintenance Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log since v2.6.6:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Trakt.tv support, tvseries can send watching and watched status online for anything new played. Watch your library build online and see what your friends are watching etc. Enter in your trakt username and password in configuration.</p></li>
+			<li><p>Added default icon to Dialog Notify, skins can add a tvseries.png in skins Media Logos folder.</p></li>
+			<li><p>Fix translation for Resume video dialog, now correctly displays 'episode' intead of 'movie'.</p></li>
+			<li><p>Updated Danish and Russian translations, thanks Steffansp and Undel.</p></li>			
+		</ul>
+	</div>
+	
 	<div class="main_title">TVSeries v2.6.6 Maintenance Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log since v2.6.5:</div>
