--- a/trunk/ReleaseNotes/ReleaseNote.html
+++ b/trunk/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,25 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+  <div class="main_title">TVSeries v3.0.4 Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+      <li><p>Updated TraktPlugin plugin to v1.0.0. Now with GUI supporting a ton of trakt features without having to leave MediaPortal.</p></li>
+      <li><p>Show a Trakt menu item in context menu if trakt plugin is installed, allows for easy jump to Calendar, Recommendations, Trending and Watch List windows. Supported skins can also support this from Hidden Menu.</p></li>
+			<li><p>Updated Hidden Menus in Default skins.</p></li>
+			<li><p>Fixed Ignored series did not re-calculate Episode Counts.</p></li>
+			<li><p>Fixed Series with semi-colon did not display thumbs in WideBanners and Filmstrip layouts.</p></li>
+			<li><p>Added setting to offer to download subtitles before playing. Requires SubCentral plugin.</p></li>
+      <li><p>Fixed 'Play First Unwatched Episode' which contain specials in season list.</p></li>
+      <li><p>Improved access to get Subtitles from context menu, removed the un-needed 'Download' item.</p></li>
+      <li><p>Updated Danish translations, thanks Steffan.</p></li>
+      <li><p>Updated Polish translations, thanks amilewski.</p></li>
+		</ul>
+	</div>
 	<div class="main_title">TVSeries v3.0.3 Beta Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
